Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15181

wrong LASSERT in osd_declare_write_commit()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Trivial Trivial
    • Lustre 2.15.0
    • None
    • 3
    • 9223372036854775807

      [13625.206311] UBSAN: Undefined behaviour in /mnt/ssdraid/xyratex/lustre-wc-rel3/lustre/osd-ldiskfs/osd_io.c:1404:2
      [13625.206363] shift exponent 4096 is too large for 32-bit type 'int'
      

      The following piece of code seems to contain a typo:

              LASSERT(extent_bytes >= (1 << osd_sb(osd)->s_blocksize));
      

            panda Andrew Perepechko
            panda Andrew Perepechko
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: